--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,95 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.boundary</groupId>
-    <artifactId>fasttuple</artifactId>
-    <packaging>pom</packaging>
-    <version>0.1-SNAPSHOT</version>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.boundary</groupId>
+  <artifactId>fasttuple</artifactId>
+  <packaging>pom</packaging>
+  <version>0.1-SNAPSHOT</version>
 
-    <modules>
-        <module>fasttuple-core</module>
-        <module>fasttuple-bench</module>
-    </modules>
+  <name>FastTuple</name>
+  <description>FastTuple is a library for generating heterogeneous tuples of primitive types from a runtime defined schema without boxing.</description>
+  <url>https://github.com/boundary/fasttuple</url>
+
+  <modules>
+    <module>fasttuple-core</module>
+    <module>fasttuple-bench</module>
+  </modules>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.9.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadoc</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <scm>
+    <connection>scm:git:git@github.com:boundary/fasttuple.git</connection>
+    <developerConnection>scm:git:git@github.com:boundary/fasttuple.git</developerConnection>
+    <url>git@github.com:boundary/fasttuple.git</url>
+  </scm>
+
+  <developers>
+    <developer>
+      <name>Cliff Moon</name>
+      <email>cliff@boundary.com</email>
+    </developer>
+  </developers>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
 
 </project>
