--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
     <module>fasttuple-core</module>
     <module>fasttuple-bench</module>
   </modules>
-
   <build>
     <plugins>
       <plugin>
@@ -59,6 +58,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
         <executions>
           <execution>
             <id>sign-artifacts</id>
