--- a/fasttuple-bench/pom.xml
+++ b/fasttuple-bench/pom.xml
@@ -43,12 +43,12 @@ questions.
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-core</artifactId>
-            <version>0.6</version>
+            <version>${jmh.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
             <artifactId>jmh-generator-annprocess</artifactId>
-            <version>0.6</version>
+            <version>${jmh.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -65,6 +65,7 @@ questions.
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jmh.version>1.20</jmh.version>
     </properties>
 
     <build>
