--- a/fasttuple-bench/pom.xml
+++ b/fasttuple-bench/pom.xml
@@ -29,11 +29,11 @@ questions.
     <parent>
         <artifactId>fasttuple</artifactId>
         <groupId>com.nickrobison</groupId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.3.0</version>
     </parent>
 
     <artifactId>fasttuple-bench</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.3.0</version>
     <packaging>jar</packaging>
 
     <name>Auto-generated JMH benchmark</name>
