--- a/fasttuple-core/pom.xml
+++ b/fasttuple-core/pom.xml
@@ -6,11 +6,11 @@
     <parent>
         <artifactId>fasttuple</artifactId>
         <groupId>com.nickrobison</groupId>
-        <version>0.3.0-SNAPSHOT</version>
+        <version>0.3.0</version>
     </parent>
 
     <artifactId>fasttuple-core</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.3.0</version>
 
     <dependencies>
         <dependency>
