--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,16 +5,24 @@
 
 strategy:
   matrix:
-    java8:
-      jdk: '1.8'
-    java11:
-      jdk: '1.11'
-    linux:
+    Linux_Java8:
       imageName: 'ubuntu-latest'
-    mac:
+      jdk: '1.8'
+    Linux_Java11:
+      imageName: 'ubuntu-latest'
+      jdk: '1.11'
+    Mac_Java8:
+      jdk: '1.8'
       imageName: 'macos-10.14'
-    windows:
+    Mac_Java11:
+      jdk: '1.11'
+      imageName: 'macos-10.14'
+    Windows_Java8:
       imageName: 'vs2017-win2016'
+      jdk: '1.8'
+    Windows_Java11:
+      imageName: 'vs2017-win2016'
+      jdk: '1.11'
 
 pool:
   vmImage: $(imageName)
