Add Jacoco coverage (#19)
* Add jacoco plugin

* Add Jacoco to azure pipelines.

* Update sonar path to point to target directory.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,8 @@ steps:
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
     sonarQubeRunAnalysis: true
+    codeCoverageToolOption: 'jaCoCo'
+    codeCoverageSourceDirectories: 'fasttuple-core/src/main/java'
 - task: SonarCloudPublish@1
   inputs:
     pollingTimeoutSec: '300'
