[maven-release-plugin] prepare release 0.3.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.nickrobison</groupId>
     <artifactId>fasttuple</artifactId>
     <packaging>pom</packaging>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.3.1</version>
 
     <name>FastTuple</name>
     <description>FastTuple is a library for generating heterogeneous tuples of primitive types from a runtime defined
@@ -97,7 +96,8 @@
         <connection>scm:git:git@github.com:nickrobison/fasttuple.git</connection>
         <developerConnection>scm:git:git@github.com:nickrobison/fasttuple.git</developerConnection>
         <url>git@github.com:nickrobison/fasttuple.git</url>
-    </scm>
+      <tag>0.3.1</tag>
+  </scm>
 
     <developers>
         <developer>
