--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.nickrobison</groupId>
     <artifactId>fasttuple</artifactId>
     <packaging>pom</packaging>
-    <version>0.3.1</version>
+    <version>0.3.2-SNAPSHOT</version>
 
     <name>FastTuple</name>
     <description>FastTuple is a library for generating heterogeneous tuples of primitive types from a runtime defined
@@ -96,7 +96,7 @@
         <connection>scm:git:git@github.com:nickrobison/fasttuple.git</connection>
         <developerConnection>scm:git:git@github.com:nickrobison/fasttuple.git</developerConnection>
         <url>git@github.com:nickrobison/fasttuple.git</url>
-      <tag>0.3.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <developers>
