Add publish task before deploy
See if we can publish things in order to avoid building twice.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,11 +47,12 @@ stages:
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
               goals: 'package'
               sonarQubeRunAnalysis: true
-              codeCoverageToolOption: 'jaCoCo'
-              codeCoverageSourceDirectories: 'fasttuple-core/src/main/java'
+#              codeCoverageToolOption: 'jaCoCo'
+#              codeCoverageSourceDirectories: 'fasttuple-core/src/main/java'
           - task: SonarCloudPublish@1
             inputs:
               pollingTimeoutSec: '300'
+          - publish: $(System.DefaultWorkingDirectory)/**/
   - stage: Deploy
     displayName: Deploy to Maven
     dependsOn: Build
