--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
+                <!--                Manually specifying Java 8 source information here due to JDK bug: https://bugs.openjdk.java.net/browse/JDK-8212233-->
+                <configuration>
+                    <source>8</source>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadoc</id>
