Add sonar to build
Update test execute and add code coverage

The compile task now executes the first round of tests, so we can have some coverage numbers.

The Test stage now runs everything except for Linux/Java8, which is run during the build stage.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,10 +21,12 @@ stages:
               gradleOptions: '-Xmx3072m'
               javaHomeOption: 'JDKVersion'
               jdkVersionOption: '1.8'
-              tasks: 'testClasses'
+              tasks: 'build'
               sonarQubeRunAnalysis: true
               sqGradlePluginVersionChoice: 'build'
               jdkArchitectureOption: 'x64'
+              publishJUnitResults: true
+              testResultsFiles: '**/test-results/test/binary/TEST-*.xml'
           - task: SonarCloudPublish@1
             inputs:
               pollingTimeoutSec: '300'
@@ -42,9 +44,6 @@ stages:
       - job: Test
         strategy:
           matrix:
-            Linux_Java8:
-              imageName: 'ubuntu-latest'
-              jdk: '1.8'
             Linux_Java11:
               imageName: 'ubuntu-latest'
               jdk: '1.11'
@@ -108,7 +107,7 @@ stages:
             inputs:
               gradleOptions: '-Xmx3072m'
               javaHomeOption: 'JDKVersion'
-              jdkVersionOption: '$(jdk)'
+              jdkVersionOption: '1.8'
               tasks: 'publish'
               jdkArchitectureOption: 'x64'
 #          - task: Maven@3
