Cleanup pipeline and try to map some secrets

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Maven
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 stages:
   - stage: Build
     displayName: Build Source Code
@@ -74,23 +69,13 @@ stages:
               tasks: 'build'
               jdkArchitectureOption: 'x64'
               publishJUnitResults: true
-              testResultsFiles: '**/test-results/test/binary/TEST-*.xml'
-#          - task: Maven@3
-#            inputs:
-#              mavenPomFile: 'pom.xml'
-#              mavenOptions: '-Xmx3072m'
-#              javaHomeOption: 'JDKVersion'
-#              jdkVersionOption: '$(jdk)'
-#              jdkArchitectureOption: 'x64'
-#              publishJUnitResults: true
-#              testResultsFiles: '**/surefire-reports/TEST-*.xml'
-#              goals: 'test'
+              testResultsFiles: '**/test-results/test/TEST-*.xml'
   - stage: Deploy
     displayName: Deploy to Maven
     dependsOn: Test
     pool:
       vmImage: "ubuntu-latest"
-#    condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+    condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
     jobs:
       - job: Deploy
         steps:
@@ -110,15 +95,6 @@ stages:
               jdkVersionOption: '1.8'
               tasks: 'publish'
               jdkArchitectureOption: 'x64'
-#          - task: Maven@3
-#            inputs:
-#              mavenPomFile: 'pom.xml'
-#              mavenOptions: '-Xmx3072m'
-#              javaHomeOption: 'JDKVersion'
-#              jdkVersionOption: '1.8'
-#              jdkArchitectureOption: 'x64'
-#              mavenAuthenticateFeed: true
-#              goals: 'deploy'
 
 
 
